--- a/docker/docker-compose.web.matwings.yaml
+++ b/docker/docker-compose.web.matwings.yaml
@@ -1,8 +1,10 @@
 version: '3'
 services:
   web:
-    image: langgenius/dify-web:1.1.2
+    image: langgenius/dify-web:1.1.3
     restart: always
+    env_file:
+      - ./web.env
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-http://192.168.1.5:5001}
       APP_API_URL: ${APP_API_URL:-http://192.168.1.5:5001}
