--- a/docker/docker-compose.web.matwings.yaml
+++ b/docker/docker-compose.web.matwings.yaml
@@ -1,35 +1,31 @@
 version: '3'
 services:
   web:
-    image: langgenius/dify-web:1.1.3
+    image: langgenius/dify-web:1.2.0
     restart: always
     env_file:
-      - ./web.env
+      - ./middleware.env
     environment:
-      CONSOLE_API_URL: ${CONSOLE_API_URL:-http://192.168.1.5:5001}
-      APP_API_URL: ${APP_API_URL:-http://192.168.1.5:5001}
-      NEXT_PUBLIC_DEPLOY_ENV: 'DEVELOPMENT'
-      NEXT_PUBLIC_EDITION: 'SELF_HOSTED'
-      NEXT_PUBLIC_API_PREFIX: 'http://192.168.1.5:5001/console/api'
-      NEXT_PUBLIC_PUBLIC_API_PREFIX: 'http://192.168.1.5:5001/api'
-      # The DSN for Sentry error reporting. If not set, Sentry error reporting will be disabled.
+      CONSOLE_API_URL: ${CONSOLE_API_URL:-}
+      APP_API_URL: ${APP_API_URL:-}
       SENTRY_DSN: ${WEB_SENTRY_DSN:-}
       NEXT_TELEMETRY_DISABLED: ${NEXT_TELEMETRY_DISABLED:-0}
-      TEXT_GENERATION_TIMEOUT_MS: ${TEXT_GENERATION_TIMEOUT_MS:-600000}
+      TEXT_GENERATION_TIMEOUT_MS: ${TEXT_GENERATION_TIMEOUT_MS:-60000}
       CSP_WHITELIST: ${CSP_WHITELIST:-}
       MARKETPLACE_API_URL: ${MARKETPLACE_API_URL:-https://marketplace.dify.ai}
       MARKETPLACE_URL: ${MARKETPLACE_URL:-https://marketplace.dify.ai}
       TOP_K_MAX_VALUE: ${TOP_K_MAX_VALUE:-}
       INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH: ${INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH:-}
       PM2_INSTANCES: ${PM2_INSTANCES:-2}
-      LOOP_NODE_MAX_COUNT: ${LOOP_NODE_MAX_COUNT:-1000}
-      MAX_TOOLS_NUM: ${MAX_TOOLS_NUM:-100}
-    # uncomment to expose dify-web port to host
+      LOOP_NODE_MAX_COUNT: ${LOOP_NODE_MAX_COUNT:-100}
+      MAX_TOOLS_NUM: ${MAX_TOOLS_NUM:-10}
+      MAX_PARALLEL_LIMIT: ${MAX_PARALLEL_LIMIT:-10}
+      MAX_ITERATIONS_NUM: ${MAX_ITERATIONS_NUM:-5}
     ports:
-      - "3000:3000"
+      - "${EXPOSE_WEB_PORT:-3000}:3000"
     networks:
       llm:
-        ipv4_address: 172.23.0.20
+        ipv4_address: ${WEB_IP_ADDRESS:-172.23.0.20}
 
 networks:
   llm:
