--- a/docker/docker-compose.web.matwings.yaml
+++ b/docker/docker-compose.web.matwings.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   web:
-    image: langgenius/dify-web:1.5.1
+    image: langgenius/dify-web:1.7.1
     restart: always
     env_file:
       - ./middleware.env
@@ -21,6 +21,9 @@ services:
       MAX_TOOLS_NUM: ${MAX_TOOLS_NUM:-10}
       MAX_PARALLEL_LIMIT: ${MAX_PARALLEL_LIMIT:-10}
       MAX_ITERATIONS_NUM: ${MAX_ITERATIONS_NUM:-5}
+      ENABLE_WEBSITE_JINAREADER: ${ENABLE_WEBSITE_JINAREADER:-true}
+      ENABLE_WEBSITE_FIRECRAWL: ${ENABLE_WEBSITE_FIRECRAWL:-true}
+      ENABLE_WEBSITE_WATERCRAWL: ${ENABLE_WEBSITE_WATERCRAWL:-true}
     ports:
       - "${EXPOSE_WEB_PORT:-3000}:3000"
     networks:
